--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "sampled_distr"
+name = "sample_distr"
 version = "0.1.0"
-description = "A package for handling sampled distributions"
+description = "A package for handling sample distributions"
 authors = [{ name = "William Norman", email = "vvilliamnorman@gmail.com" }]
 readme = "README.md"
 license = { text = "MIT" }
